<resources>
    <string name="app_name">Ibolot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_bottom">Главное</string>
    <string name="service_bottom">Услуги</string>
    <string name="profile_bottom">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="orthopedics">Ортопедия</string>
    <string name="protez">Протезирование при полном отсутствии зубов</string>
    <string name="submit">записаться</string>
    <string name="desc_protez">Полный съемный протез является наиболее простым и бюджетным вариантом для тех, у кого совсем не осталось зубов. В данном случае чаще всего используется акриловая или нейлоновая пластмасса.</string>
    <string name="desc2">- Надежная конструкция - Крепкая фиксация - Равномерное распределение нагрузки - Комфортная носка</string>
    <string name="price">Цена:    1000 сом</string>
    <string name="search_hint">Поиск услуг</string>
    <string name="enter_search">Введите поиск</string>
    <string name="doctors_list">Врачи на которых можно записаться</string>
    <string name="register_password">Пароль</string>
    <string name="register_name">Телефон или Имя пользователя</string>
    <string name="register">Войти в Ibolot</string>
    <string name="register_exit">Войти</string>
    <string name="register_forgot_password">Забыли пароль?</string>
    <string name="register_save_your">Сохранить ваши данные</string>
    <string name="register_registration">Регистрация</string>
    <string name="name_doctor">Антон Иванович</string>
    <string name="your_name">Ваше имя</string>
    <string name="et_number">Ваш телефон</string>
    <string name="day_record">Выбрать день для записи</string>
    <string name="et_sos">Опишите ваше беспокойство</string>
    <string name="doctors">Доктора</string>
    <string name="record">Запись</string>
    <string name="card_children">Детям</string>
    <string name="card_about">О нас</string>
    <string name="card_services">Услуги</string>
    <string name="Section_is_under_development">Раздел находится в разработке</string>
    <string name="time_record">Выберите время для записи</string>
    <string name="back">Назад</string>
    <string name="input_name">Введите ваше имя</string>
    <string name="ibolot_description">Ibolot использует стандарты московского медицинского центра \"Открытая Клиника\". Наши врачи используют стандартизированные алгоритмы приёма пациентов.</string>
    <string name="ibolot_description2">Ibolot использует инновационный подход к ведению приёмов – мы клиника, в которой информационные технологии интегрированы во все процессы.</string>
    <string name="ibolot_description3">Ibolot выстраивает доверительные отношения со своими пациентами. Мы не позволяем нашим врачам выписывать лишние назначения по лекарствам и лабораторным анализам.</string>
    <string name="ibolot_title">О НАШЕЙ КЛИНИКЕ</string>
    <string name="ibolot_title2">РАБОТАЕМ ПО СТАНДАРТАМ</string>
    <string name="ibolot_title3">ИСПОЛЬЗУЕМ ЦИФРОВОЙ ПОДХОД</string>
    <string name="ibolot_title4">НЕ ДЕЛАЕМ ГИПЕРДИАГНОСТИКУ</string>
    <string name="protez_">Преимущества съемного протеза с балочной фиксацией</string>
    <string name="image">image</string>
    <string name="otbelivanie">Отбеливание зубов</string>
    <string name="jev">Восстановление функций</string>
    <string name="protezirovanie">Протезирование</string>
    <string name="dentures">Съемные протезы</string>
    <string name="coronki">Установка коронок</string>
    <string name="implant">Имплантация зубов</string>
    <string name="brackets">Установка брекетов</string>
    <string name="caries">Лечение кариеса</string>
    <string name="desc">Условно-съёмные протезы на имплантатах отличаются своей прочностью и надежностью. Вся конструкция будет надежно закреплена. Всегда открытое небо и никаких натираний на деснах! Еще один плюс такого протеза – это легкость и воздушность</string>
    <string name="crowns_desc">Все начинается с рентгенологической диагностики. Если есть необходимость, нужно пролечить зубы – вычистить кариозные полости, запломбировать корневые каналы, удалить нерв и т.д. При установке мостовидного протеза стоматологи часто убирают нерв и у здоровых зубов.</string>
    <string name="auth">Авторизация</string>
    <string name="childrens">Дети</string>
    <string name="children">Удаление временного зуба</string>
    <string name="tv_children">Лечение стоматитов у детей</string>
    <string name="children_tv">Кариес молочных зубов</string>
</resources>