<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/ibolot_background"
    tools:context=".ui.fragments.profile.ExitFragment">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/edittext_background"
        android:hint="@string/register_name"
        android:textSize="12sp"
        android:id="@+id/et_number_or_name"
        android:paddingStart="8dp"
        android:layout_marginBottom="16dp"
        android:layout_height="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/edittext_background"
        android:hint="@string/register_password"
        android:textSize="12sp"
        android:id="@+id/et_password"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_height="40dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:id="@+id/checkbox_save"
        android:text="@string/register_save_your"
        android:layout_marginBottom="16dp"

        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        app:cornerRadius="8dp"
        android:id="@+id/btn_exit"
        android:backgroundTint="@color/ibolot"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:text="@string/register_exit"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_height="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/register_forgot_password"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:id="@+id/tv_forgot_password"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/register_registration"
        android:textColor="@color/gray"
        android:id="@+id/tv_registration"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>