<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.ibolot.ui.fragments.main.MainFragment"
        tools:layout="@layout/fragment_main"
        android:label="@string/main_bottom"/>

    <fragment
        android:id="@+id/navigation_service"
        android:name="com.example.ibolot.ui.fragments.service.ServiceFragment"
        android:label="@string/service_bottom"
        tools:layout="@layout/fragment_service"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ibolot.ui.fragments.profile.ProfileFragment"
        android:label="@string/profile_bottom" />

    <fragment
        android:id="@+id/ortophedicsFragment"
        android:name="com.example.ibolot.ui.fragments.service.orthopedics.OrthopedicsFragment"
        android:label="@string/orthopedics"
        tools:layout="@layout/fragment_orthopedics" />
    <fragment
        android:id="@+id/prostheticsFragment"
        android:name="com.example.ibolot.ui.fragments.service.prosthetic.ProstheticsFragment"
        android:label="@string/orthopedics"
        tools:layout="@layout/fragment_prosthetics" />
    <fragment
        android:id="@+id/doctorsFragment"
        android:name="com.example.ibolot.ui.fragments.service.doctors.DoctorsFragment"
        android:label="@string/doctors" />
    <fragment
        android:id="@+id/recordFragment"
        android:name="com.example.ibolot.ui.fragments.service.record.RecordFragment"
        android:label="@string/record"
        tools:layout="@layout/fragment_record" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.ibolot.ui.fragments.service.record.CalendarFragment"
        android:label="@string/record"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/childrenFragment"
        android:name="com.example.ibolot.ui.fragments.main.ChildrenFragment"
        android:label="@string/childrens"
        tools:layout="@layout/fragment_children" />

    <fragment
        android:id="@+id/deleteToothFragment"
        android:name="com.example.ibolot.ui.fragments.main.details.DeleteToothFragment"
        android:label="@string/childrens"
        tools:layout="@layout/fragment_delete_tooth" />

    <fragment
        android:id="@+id/dentalTreatmentFragment"
        android:name="com.example.ibolot.ui.fragments.main.details.DentalTreatmentFragment"
        android:label="@string/childrens"
        tools:layout="@layout/fragment_dental_treatment" />

    <fragment
        android:id="@+id/toothChildrenFragment"
        android:name="com.example.ibolot.ui.fragments.main.details.ToothChildrenFragment"
        android:label="@string/childrens"
        tools:layout="@layout/fragment_tooth_children" />

</navigation>