<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ibolot_background"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/img"
            android:layout_width="410dp"
            android:layout_height="270dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/delete_tooth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="180sp"
            android:layout_height="63sp"
            android:text="@string/children"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/img"
            app:layout_constraintTop_toBottomOf="@id/img"
            android:layout_marginStart="18dp"
            android:layout_marginTop="17dp"
            android:textSize="24sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            app:cornerRadius="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/submit"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/tv"
            app:layout_constraintTop_toBottomOf="@id/img"
            android:layout_marginTop="17dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_protez"
            app:layout_constraintStart_toStartOf="@id/tv"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/protez_"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc1"
            android:layout_marginEnd="77dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="12dp"
            android:text="@string/desc2"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>