<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3E0F0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/base_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/ibolot_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/card_about"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about_top" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter"
                android:paddingVertical="@dimen/about_padding"
                android:text="@string/ibolot_title2"
                android:textColor="@color/black"
                android:textSize="@dimen/about_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:paddingVertical="@dimen/about_padding"
                android:text="@string/ibolot_description"
                android:textColor="#505050"
                android:textSize="@dimen/about_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter"
                android:paddingVertical="@dimen/about_padding"
                android:text="@string/ibolot_title3"
                android:textColor="@color/black"
                android:textSize="@dimen/about_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:paddingVertical="@dimen/about_padding"
                android:text="@string/ibolot_description2"
                android:textColor="#505050"
                android:textSize="@dimen/about_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter"
                android:paddingVertical="@dimen/about_padding"
                android:text="@string/ibolot_title4"
                android:textColor="@color/black"
                android:textSize="@dimen/about_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:paddingVertical="@dimen/about_padding"
                android:text="@string/ibolot_description3"
                android:textColor="#505050"
                android:textSize="@dimen/about_description" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="16dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/card_about"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about_bottom" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>