<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img"
        android:layout_width="410dp"
        android:layout_height="270dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/prosthetics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="180sp"
        android:layout_height="63sp"
        android:text="@string/protez"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/img"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:layout_marginStart="18dp"
        android:layout_marginTop="17dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/submit"
        app:layout_constraintStart_toEndOf="@id/tv"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:layout_marginTop="17dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_protez"
        app:layout_constraintStart_toStartOf="@id/tv"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Преимущества съемного протеза с балочной фиксацией"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc1"
        android:layout_marginEnd="77dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/desc2"
        android:layout_width="302dp"
        android:layout_height="76dp"
        app:layout_constraintStart_toStartOf="@id/desc1"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        android:text="@string/desc2"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/desc2"
        app:layout_constraintTop_toBottomOf="@id/desc2"/>

</androidx.constraintlayout.widget.ConstraintLayout>